# abstract_telegram_bot

./: README.md  pyproject.toml
src/example/: main.py
src/example/handlers/: echo_handler.py
src/sdk/tg/: bot.py  callback.py  common.py  exceptions.py  handlers.py  keyboard.py
